New feature: Ability to subscribe
